# fastapi-framework-ex

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.base.yml  docker-compose.v1.yml  docker-compose.v2.yml  main.py  pyproject.toml
app/api/errors/: http_error.py  validation_error.py  value_error.py
app/api/routes/: api.py  sample_router.py  sql_router.py  utils.py
app/core/: config.py
app/core/settings/: app.py  base.py  development.py  production.py  uat.py
app/db/: connect_to_mdc.py  connect_to_mssql.py  connect_to_odbc.py  connect_to_redis.py
app/db/odbc_driver/: odbcinst.ini
app/schedulers/: tasks.py
nginx/: nginx.conf
shell_scripts/: .env.example  archive.sh  deploy.sh  deploy_v2.sh  update_env.sh
tests/: conftest.py
