[tool.poetry]
name = "app"
version = "0.1.0"
description = "DataAggregator"
authors = ["TaiChungMin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.0"
uvicorn = "0.30.1"
pymongo = "4.7.2"
mongoengine = "0.28.2"
numpy = "1.24.4"
pandas = "2.0.3"
numexpr = "2.8.6"
redis = "5.0.4"
openpyxl = "3.1.4"
plotly = "5.22.0"
matplotlib = "3.7.5"
loguru = "0.7.2"
pydantic-settings = "2.3.1"
apscheduler = "3.10.4"
requests = "2.32.3"
httpx = "^0.27.2"
pytest = ">=7.0.0"
pytest-asyncio = "^0.24.0"
motor = "3.5.1"
asgi-lifespan = "^2.1.0"
arrow = "^1.3.0"
pyodbc = "^5.2.0"
pymssql = "^2.3.1"
pytest-mock = ">=3.10.0"
mongomock = ">=4.1.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "e2e: mark test as end-to-end test"
]
log_cli = true
log_level = "DEBUG"
testpaths = [
    "tests"
]